// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NodeAvatar/> should render 1`] = `
Array [
  .c2 {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  box-sizing: border-box;
  background-color: #f9fafb;
  border: solid 1px #dedeeb;
  border-radius: 4px;
  width: 100%;
  height: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 .left {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .left.as-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
}

.c3 .name {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #031A51;
  text-transform: initial;
  font-weight: 400;
}

.c3 .type {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #8697BF;
  text-transform: initial;
  font-weight: 400;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="small"
  >
    <div
      className="content"
    >
      <div
        className="c1 header"
      >
        <div
          className="left as-row"
        >
          <div
            className="icon"
          >
            <div
              className="c2 svg-icon alert  "
            >
              <svg
                height="20px"
                width="20px"
              >
                ico-alert.svg
              </svg>
            </div>
          </div>
          <div
            className="c3 header-text"
            size="small"
          >
            <div
              className="name"
            />
          </div>
        </div>
      </div>
      <div
        className=""
      />
    </div>
  </div>,
  "",
]
`;

exports[`<NodeAvatar/> should render the header fo rexagon correctly 1`] = `
Array [
  .c3 {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 .left {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .left.as-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 4px;
}

.c4 .name {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #031A51;
  text-transform: initial;
  font-weight: 400;
}

.c4 .type {
  font-family: 'Roboto',sans-serif;
  font-size: 11px;
  line-height: 16px;
  color: #8697BF;
  text-transform: initial;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 35.79676674364896px;
  width: 62px;
  background-color: #dedeeb;
  margin: 17.89838337182448px 0;
}

.c0:before,
.c0:after {
  content: '';
  position: absolute;
  width: 0;
  border-left: 31px solid transparent;
  border-right: 31px solid transparent;
}

.c0:before {
  bottom: 100%;
  border-bottom: 17.89838337182448px solid #dedeeb;
}

.c0:after {
  top: 100%;
  width: 0;
  border-top: 17.89838337182448px solid #dedeeb;
}

.c0 .content {
  position: relative;
  top: -1px;
}

.c0 .content .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .content .header {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
}

.c0 .content .react-flow__handle-bottom {
  top: 52.69515011547344px;
  z-index: 2;
}

.c1 {
  left: 1px;
  z-index: 1;
  position: relative;
  height: 35.64203233256351px;
  width: 60px;
  background-color: #f9fafb;
  margin: 17.821016166281755px 0;
}

.c1:before,
.c1:after {
  content: '';
  position: absolute;
  width: 0;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
}

.c1:before {
  bottom: 100%;
  border-bottom: 16.821016166281755px solid #f9fafb;
}

.c1:after {
  top: 100%;
  width: 0;
  border-top: 16.821016166281755px solid #f9fafb;
}

.c1 .content {
  position: relative;
  top: -1px;
}

.c1 .content .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .content .header {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
}

.c1 .content .react-flow__handle-bottom {
  top: 51.46304849884527px;
  z-index: 2;
}

<div
    className="c0 exagon"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="small"
  >
    <div
      className="c1 exagon inner"
      size="small"
    >
      <div
        className="content"
      >
        <div
          className="c2 header"
        >
          <div
            className="left as-column"
          >
            <div
              className="icon"
            >
              <div
                className="c3 svg-icon alert  "
              >
                <svg
                  height="20px"
                  width="20px"
                >
                  ico-alert.svg
                </svg>
              </div>
            </div>
            <div
              className="c4 header-text"
              size="small"
            >
              <div
                className="name"
              />
            </div>
          </div>
        </div>
        <div
          className=""
        />
      </div>
    </div>
  </div>,
  "",
]
`;
